Bug 157792 - FILEOPEN: PPT: logo not displayed
Summary: FILEOPEN: PPT: logo not displayed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-10-16 10:38 UTC by Xisco Faulí
Modified: 2023-10-18 11:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (181.00 KB, application/vnd.ms-powerpoint)
2023-10-16 10:38 UTC, Xisco Faulí
Details
Comparsion LibreOffice 24.2 master vs MSO (37.41 KB, image/png)
2023-10-16 10:39 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-10-16 10:38:59 UTC
Created attachment 190232 [details]
sample file

Steps to reproduce:
1. Open attached document

-> The logo in the right bottom corner is not displayed. See comparison

Reproduced with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3649dc202bedf72e37c77993a1f7027bfdfc6d9e
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-10-16 10:39:54 UTC
Created attachment 190233 [details]
Comparsion LibreOffice 24.2 master vs MSO
Comment 2 Xisco Faulí 2023-10-16 10:41:20 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-10-11 12:54:43 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-10-12 07:57:02 +0200
commit 3622404f09448b82c095256140afe6240b522ece (patch)
tree a073aa55a39af1dfde7d3ca97e5062d78ca49b63
parent 44fed6aec98320bf7ec793f08447bb8d455abc4f (diff)
tdf#157636 FILEOPEN: PPT: Images have no background

Bisected with: bibisect-linux64-24.2

Adding Cc: to Noel Grandin
Comment 3 Commit Notification 2023-10-17 17:07:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dcaa66e4663111f563eab54aae7e1d73e1ae8e44

tdf#157792 FILEOPEN: PPT: logo not displayed

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2023-10-18 07:39:52 UTC
Verified in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4be9bd0595cec36b6a22ca12b48661e080a5a1d8
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Noel, thanks for fixing this issue!!
Comment 5 Commit Notification 2023-10-18 11:39:12 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/25f4ef5aa5488869b3bad045ba203c6b22b2e2f0

tdf#157792 followup

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.