tdf#157792 FILEOPEN: PPT: logo not displayed

regression from
    commit 3622404f09448b82c095256140afe6240b522ece
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Wed Oct 11 12:54:43 2023 +0200
    tdf#157636 FILEOPEN: PPT: Images have no background

But actually from
    commit 81994cb2b8b32453a92bcb011830fcb884f22ffe
    Convert internal vcl bitmap formats transparency->alpha (II)

where BitmapEx::CombineMaskOr was not properly updated.

To make this stuff more obvious, add a version of CombineOr
called AlphaCombineOr that only operates on AlphaMask objects.

Change-Id: I8222bcdd7babefb748d21a71d02775c6a74bf068
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158085
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>